-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11
-
Component/s: core-libs
-
b14
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8203576 | 11.0.1 | Alexey Ivanov | P4 | Resolved | Fixed | team |
ZIP_Open, ZIP_Close, ZIP_FindEntry, ZIP_ReadEntry, ZIP_GetNextEntry, ZIP_InflateFully, ZIP_CRC32 and ZIP_FreeEntry.
On Linux, in addition to the list above, the following functions were exported:
ZIP_GetEntry, ZIP_Lock, ZIP_Read, ZIP_Unlock.
Now these functions are also exported on Windows.
But, according to code in classLoader.cpp [1], these additional functions are not used and therefore can be hidden.
[1] http://hg.openjdk.java.net/jdk/jdk/file/e0af66d6e968/src/hotspot/share/classfile/classLoader.cpp#l1189
- backported by
-
JDK-8203576 Hide unused exports in libzip
-
- Resolved
-
- relates to
-
JDK-8200178 Remove mapfiles for JDK native libraries
-
- Resolved
-