8202544: Hide unused exports in libzip

Reviewed-by: clanger, ihse